--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -179,8 +179,53 @@ header,#loginScreen,.btn,#modalCobro,#qrReaderContainer{display:none!important}
       <div id="resultados" class="search-results"></div>
     </div>
   </section>
+<!-- 🧪 PANTALLA DE PRUEBAS DEL POS -->
+<section id="pantallaTest" style="
+  display:none;
+  padding:15px;
+  background:#ffffff;
+  border-radius:14px;
+  margin:15px;
+  box-shadow:0 2px 10px rgba(0,0,0,0.15);
+">
 
-</div>
+  <h2 style="text-align:center;color:#0c6cbd;margin-bottom:12px;">
+    🔧 Panel de Pruebas – PROVSOFT POS
+  </h2>
+
+  <!-- 🖨 PRUEBA DE IMPRESORA -->
+  <button id="btnTestPrinter" class="btn" style="background:#0c6cbd;margin:6px 0;">
+    🖨 Probar Impresora
+  </button>
+
+  <!-- 📍 PRUEBA GPS -->
+  <button id="btnTestGPS" class="btn" style="background:#f59e0b;margin:6px 0;">
+    📍 Probar GPS
+  </button>
+
+  <!-- 📊 CORTE DE RUTA -->
+  <button id="btnCorteRuta" class="btn" style="background:#1e8e3e;margin:6px 0;">
+    📊 Corte de Ruta
+  </button>
+
+  <!-- RESULTADOS -->
+  <div id="testResult" style="
+    margin-top:12px;
+    padding:12px;
+    font-size:14px;
+    color:#333;
+    text-align:center;
+    background:#f3f4f6;
+    border-radius:8px;
+    display:block;
+  "></div>
+
+  <!-- 🔄 VOLVER A VENTAS -->
+  <button id="btnVolverVenta" class="btn" style="margin-top:15px;background:#444;">
+    ⬅️ Volver al POS
+  </button>
+
+</section>
 
 <!-- 🧾 BLOQUE NUEVO — CARRITO FIJO -->
 <div id="carrito-container">
@@ -2178,8 +2223,6 @@ document.getElementById("btnLogout").addEventListener("click",()=>{
 const btnTestFuncion = document.getElementById("btnVerCarrito");
 const pantallaVenta = document.getElementById("pantallaVenta");
 const pantallaTest = document.getElementById("pantallaTest");
-const carritoContainer = document.getElementById("carrito-container");
-
 // 🧩 Mostrar pantalla de pruebas
 btnTestFuncion.addEventListener("click", () => {
   pantallaVenta.style.display = "none";
