--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -334,7 +334,13 @@ header,#loginScreen,.btn,#modalCobro,#qrReaderContainer{display:none!important}
         style="flex:1;background:linear-gradient(180deg,#0c6cbd,#094d85);
               font-size:16px;">Confirmar</button>
   </div>
-<!-- MÓDULOS PROVSOFT POS -->
+  <!-- FIN DE BOTONES -->
+  </div> <!-- cierre de .modal-b -->
+
+</div> <!-- cierre de .modal-card -->
+
+</div> <!-- cierre de #modalCobro -->
+  <!-- MÓDULOS PROVSOFT POS -->
 <script src="./js/pos-core.js" defer></script>
 <script src="./js/pos-busqueda.js" defer></script>
 <script src="./js/pos-firebase.js" defer></script>
