--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -340,15 +340,15 @@ header,#loginScreen,.btn,#modalCobro,#qrReaderContainer{display:none!important}
 </div> <!-- cierre de .modal-card -->
 
 </div> <!-- cierre de #modalCobro -->
-  <!-- MÓDULOS PROVSOFT POS -->
-<script src="./js/pos-core.js" defer></script>
-<script src="./js/pos-busqueda.js" defer></script>
-<script src="./js/pos-firebase.js" defer></script>
-<script src="./js/pos-ticket.js" defer></script>
-<script src="./js/pos-qr.js" defer></script>
-<script src="./js/pos-offline.js" defer></script>
-<script src="./js/pos-modals.js" defer></script>
-<script src="./js/pos-test.js" defer></script>
+<!-- MÓDULOS PROVSOFT POS -->
+<script type="module" src="./js/pos-core.js"></script>
+<script type="module" src="./js/pos-busqueda.js"></script>
+<script type="module" src="./js/pos-firebase.js"></script>
+<script type="module" src="./js/pos-ticket.js"></script>
+<script type="module" src="./js/pos-qr.js"></script>
+<script type="module" src="./js/pos-offline.js"></script>
+<script type="module" src="./js/pos-modals.js"></script>
+<script type="module" src="./js/pos-test.js"></script>
 
 </body>
 </html>
