--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -340,6 +340,11 @@ header,#loginScreen,.btn,#modalCobro,#qrReaderContainer{display:none!important}
 </div> <!-- cierre de .modal-card -->
 
 </div> <!-- cierre de #modalCobro -->
+<!-- 🔥 Firebase Core + Firestore -->
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+
 <!-- MÓDULOS PROVSOFT POS -->
 <script type="module" src="./js/pos-core.js"></script>
 <script type="module" src="./js/pos-busqueda.js"></script>
