--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -346,14 +346,14 @@ header,#loginScreen,.btn,#modalCobro,#qrReaderContainer{display:none!important}
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
 
 <!-- MÓDULOS PROVSOFT POS -->
-<script type="module" src="./js/pos-core.js"></script>
-<script type="module" src="./js/pos-busqueda.js"></script>
-<script type="module" src="./js/pos-firebase.js"></script>
-<script type="module" src="./js/pos-ticket.js"></script>
-<script type="module" src="./js/pos-qr.js"></script>
-<script type="module" src="./js/pos-offline.js"></script>
-<script type="module" src="./js/pos-modals.js"></script>
-<script type="module" src="./js/pos-test.js"></script>
+<script defer src="./js/pos-core.js"></script>
+<script defer src="./js/pos-busqueda.js"></script>
+<script defer src="./js/pos-firebase.js"></script>
+<script defer src="./js/pos-ticket.js"></script>
+<script defer src="./js/pos-qr.js"></script>
+<script defer src="./js/pos-offline.js"></script>
+<script defer src="./js/pos-modals.js"></script>
+<script defer src="./js/pos-test.js"></script>
 
 </body>
 </html>
