--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -424,6 +424,8 @@ localStorage.removeItem("usuario_ruta");
     // 🌀 Cargar datos principales
 document.getElementById("loginScreen").style.display = "none";
 document.getElementById("posApp").style.display = "block";
+document.getElementById("bottomBar").style.display = "flex";
+document.getElementById("carrito-container").style.display = "block";
 
     // Carga simultánea
     await Promise.all([
