--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -1541,7 +1541,8 @@ return {
 const carritoContainer = document.getElementById("carrito-container");
 
 // Evitar errores si no existe
-if (carritoContainer) carritoContainer.style.display = "block";
+if (carritoContainer) carritoContainer.style.display = "";
+
 
 pantallaVenta.style.display = "flex";
 
