--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -1544,7 +1544,8 @@ const carritoContainer = document.getElementById("carrito-container");
 if (carritoContainer) carritoContainer.style.display = "";
 
 
-pantallaVenta.style.display = "flex";
+pantallaVenta.style.display = "";
+
 
 const busc = document.getElementById("buscador");
 if (busc) busc.focus();
