--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -941,7 +941,7 @@ function render(desc = 0) {
   carrito.forEach(it => {
     const tr = document.createElement("tr");
     tr.innerHTML = `
-      <td>${it.nombre}</td>
+      <td>${(it.nombre || "").substring(0, 10)}...</td>
       <td style="text-align:center">
         <input type="number" min="0" step="0.01" value="${it.cantidad}"
           style="width:70px;text-align:center;padding:4px;border-radius:6px;
