--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
    <a href="POSVTA4/TRANSFESPOS4.html"> TRANSFER DE RUTAS V4 </a>
   </div>
   <div class="apps">
+   <a href="SIFEI/FACTURACIONTICKETS.html"> SIFEI POS </a>
+  </div>
+  <div class="apps">
    <a href="AJUSTEZAPATA/AJUZAPATA.html"> AJUSTE ZAPATA </a>
   </div>
   <footer>
